@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.3.0
 
+	- added scroll_to() to Fl_Scroll, replacing position()
+	  which now behaves as it should (STR #1303)
+	- fixed Fl_Scroll inside Fl_Scroll (STR #265)
 	- hardcoded 1.1 references in src/Makefile to 1.3 
 	  (STR #1922)
 	- changed font index to 32 bit
